--- a/01_html-email/index.html
+++ b/01_html-email/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Blanchard</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<style>
+	<style type="">
 		body {
 			width: 100% !important;
 			-webkit-text-size-adjust: 100%;
@@ -13,6 +13,7 @@
 			margin: 0;
 			padding: 0;
 			line-height: 100%;
+      align-items: center;
 		}
 
 		[style*="Open Sans"] {font-family: arial, 'Open Sans',  sans-serif !important;}
@@ -140,7 +141,11 @@
         display: none;
       } */
 
-      .block-mobile {
+      .img-head {
+        width: 114px;
+      }
+
+      .block-mobile td {
         display: inline-block;
       }
 
@@ -152,25 +157,25 @@
 	</style>
 </head>
 
-<body class="table-600" style="margin: 0; padding: 0;" width="600px">
-  <div style="font-size:0px;font-color:#ffffff;opacity:0;visibility:hidden;width:0;height:0;display:none;">Blanchard</div>
+<body>
+  <div style="font-size:0px;color:#ffffff;opacity:0;visibility:hidden;width:0;height:0;display:none;">Blanchard</div>
   <table class="table-600 center" align="center" cellpadding="0" cellspacing="0" width="600px" bgcolor="#000000">
     <tr>
       <td class="table-600 center pt-30" align="center" style="padding-bottom: 7.37px;" width="600px">
-        <picture>
+        <!-- <picture>
           <source srcset="http://bh.cf65168-blanchard.webtm.ru/img/Blanchard-logo-mobile.png" media="(max-width: 620px)">
           <img src="http://bh.cf65168-blanchard.webtm.ru/img/Blanchard-logo.png" alt="Логотип">
-        </picture>
-        <!-- <img src="http://bh.cf65168-blanchard.webtm.ru/img/Blanchard-logo.png" alt="Логотип"> -->
+        </picture> -->
+        <img class="img-head" src="http://bh.cf65168-blanchard.webtm.ru/img/Blanchard-logo.png" alt="Логотип"/>
       </td>
     </tr>
     <tr>
       <td class="table-600 center pb-30" align="center" width="600px">
-        <picture>
+        <!-- <picture>
           <source srcset="http://bh.cf65168-blanchard.webtm.ru/img/art_gallery-mobile.png" media="(max-width: 620px)">
           <img src="http://bh.cf65168-blanchard.webtm.ru/img/art_gallery.png" alt="художественная_галерея">
-        </picture>
-        <!-- <img src="http://bh.cf65168-blanchard.webtm.ru/img/art_gallery.png" alt="художественная_галерея"> -->
+        </picture> -->
+        <img class="img-head" src="http://bh.cf65168-blanchard.webtm.ru/img/art_gallery.png" alt="художественная_галерея"/>
       </td>
     </tr>
   </table>
@@ -181,7 +186,7 @@
           <source srcset="http://bh.cf65168-blanchard.webtm.ru/img/photo-1-mobile.png" media="(max-width: 620px)">
           <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-1.png" alt="photo-1">
         </picture> -->
-        <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-1.png" alt="photo-1">
+        <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-1.png" alt="photo-1"/>
       </td>
     </tr>
     <tr>
@@ -224,7 +229,7 @@
                       <source srcset="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-1-mobile.png" media="(max-width: 620px)">
                       <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-1.png" alt="photo-tab-1">
                     </picture> -->
-                    <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-1.png" alt="photo-tab-1">
+                    <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-1.png" alt="photo-tab-1"/>
                   </td>
                 </tr>
                 <tr>
@@ -249,7 +254,7 @@
                       <source srcset="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-2-mobile.png" media="(max-width: 620px)">
                       <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-2.png" alt="photo-tab-2">
                     </picture> -->
-                    <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-2.png" alt="photo-tab-2">
+                    <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-2.png" alt="photo-tab-2"/>
                   </td>
                 </tr>
                 <tr>
@@ -274,7 +279,7 @@
                       <source srcset="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-3-mobile.png" media="(max-width: 620px)">
                       <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-3.png" alt="photo-tab-3">
                     </picture> -->
-                    <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-3.png" alt="photo-tab-3">
+                    <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-3.png" alt="photo-tab-3"/>
                   </td>
                 </tr>
                 <tr>
@@ -299,7 +304,7 @@
                       <source srcset="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-4-mobile.png" media="(max-width: 620px)">
                       <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-4.png" alt="photo-tab-4">
                     </picture> -->
-                    <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-4.png" alt="photo-tab-4">
+                    <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-4.png" alt="photo-tab-4"/>
                   </td>
                 </tr>
                 <tr>
@@ -324,7 +329,7 @@
                       <source srcset="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-5-mobile.png" media="(max-width: 620px)">
                       <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-5.png" alt="photo-tab-5">
                     </picture> -->
-                    <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-5.png" alt="photo-tab-5">
+                    <img src="http://bh.cf65168-blanchard.webtm.ru/img/photo-tab-5.png" alt="photo-tab-5"/>
                   </td>
                 </tr>
                 <tr>
@@ -357,22 +362,22 @@
           </tr>
           <tr>
             <td>
-              <table class="table-250" align="top" cellpadding="0" cellspacing="0" width="489px">
+              <table class="table-250" align="left" cellpadding="0" cellspacing="0" width="489px">
                 <tr class="more-block block-mobile">
                   <td>
-                    <img style="padding-bottom: 11px;" src="http://bh.cf65168-blanchard.webtm.ru/img/check-square.png" alt="check">
+                    <img style="padding-bottom: 11px;" src="http://bh.cf65168-blanchard.webtm.ru/img/check-square.png" alt="check"/>
                     <p class="more_text pr-27" style="font-family: arial, 'Open Sans', sans-serif !important;">
                       Уникальные подборки работ с&nbsp;авторскими рецензиями
                     </p>
                   </td>
                   <td>
-                    <img style="padding-bottom: 11px;" src="http://bh.cf65168-blanchard.webtm.ru/img/calendar.png" alt="calendar">
+                    <img style="padding-bottom: 11px;" src="http://bh.cf65168-blanchard.webtm.ru/img/calendar.png" alt="calendar"/>
                     <p class="more_text pr-27" style="font-family: arial, 'Open Sans', sans-serif !important;">
                       Возможность настроить нашу рассылку под свой личный вкус
                     </p>
                   </td>
                   <td>
-                    <img style="padding-bottom: 11px;" src="http://bh.cf65168-blanchard.webtm.ru/img/arrow-up-circle.png" alt="arrow-up-circle">
+                    <img style="padding-bottom: 11px;" src="http://bh.cf65168-blanchard.webtm.ru/img/arrow-up-circle.png" alt="arrow-up-circle"/>
                     <p class="more_text pr-27" style="font-family: arial, 'Open Sans', sans-serif !important;">
                       У&nbsp;вас есть пожелания и&nbsp;предложения?
                       Напишите&nbsp;нам в&nbsp;ответ на&nbsp;это письмо!
@@ -381,7 +386,7 @@
                 </tr>
                 <!-- <tr class="block-mobile">
                   <td>
-                    <table cellpadding="0" cellspacing="0" width="489px">
+                    <table class="table-250 center" align="center" cellpadding="0" cellspacing="0" width="489px">
                       <tr>
                         <td>
                           <img style="padding-bottom: 11px;" src="http://bh.cf65168-blanchard.webtm.ru/img/check-square.png" alt="check">
@@ -418,7 +423,7 @@
               <table cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="btn">
-                    <a href="#" style="font-family: arial, 'Open Sans', sans-serif !important;">Узнать все подробности</a>
+                    <a href="#" style="font-family: arial, 'Open Sans', sans-serif !important; color: #FFFFFF !important;">Узнать все подробности</a>
                   </td>
                 </tr>
               </table>
@@ -434,21 +439,21 @@
         <table class="table-600" align="center" cellpadding="0" cellspacing="0" bgcolor="#000000" width="600px">
           <tr>
             <td style="padding-top: 27.5px; padding-bottom: 12.5px;">
-              <table class="center" align="center" cellpadding="0" cellspacing="0">
+              <table class="center" align="center" cellpadding="0" cellspacing="0" width="143px">
                 <tr>
                   <td class="footer-link">
                     <a href="#">
-                      <img src="http://bh.cf65168-blanchard.webtm.ru/img/vk.png" alt="vk">
+                      <img src="http://bh.cf65168-blanchard.webtm.ru/img/vk.png" alt="vk"/>
                     </a>
                   </td>
                   <td class="footer-link">
                     <a href="#">
-                      <img src="http://bh.cf65168-blanchard.webtm.ru/img/instagram.png" alt="instagram">
+                      <img src="http://bh.cf65168-blanchard.webtm.ru/img/instagram.png" alt="instagram"/>
                     </a>
                   </td>
                   <td>
                     <a href="#">
-                      <img src="http://bh.cf65168-blanchard.webtm.ru/img/fb.png" alt="fb">
+                      <img src="http://bh.cf65168-blanchard.webtm.ru/img/fb.png" alt="fb"/>
                     </a>
                   </td>
                 </tr>
@@ -468,7 +473,7 @@
     <tr bgcolor="#EBEBEB">
       <td align="center">
         <p style="margin: 0; font-family: arial, 'Open Sans', sans-serif !important; font-style: normal; font-weight: 400; font-size: 10px; line-height: 24px; color: #757575;">
-          Вы можете так же <a href="#" style="font-family: arial, 'Open Sans', sans-serif !important; color: #9D5CD0;">отписаться от рассылки</a>
+          Вы можете так же <a href="#" style="font-family: arial, 'Open Sans', sans-serif !important; color: #9D5CD0; text-decoration: underline !important;">отписаться от рассылки</a>
         </p>
       </td>
     </tr>
