--- a/03_js-animation/index.html
+++ b/03_js-animation/index.html
@@ -114,7 +114,7 @@
       </section>
     </main>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+  <script src="js/gsap.min.js"></script>
   <script src="js/index.js"></script>
 </body>
 
